# 42AI-python

./: README.md
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: operations.py
module00/ex04/: count.py
module00/ex05/: recipe.py
module00/ex06/: filterwords.py
module00/ex07/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex08/: loading.py
module01/ex00/: recipe.py
module01/ex01/: game.py
module01/ex02/: genrator.py
module01/ex03/: eval.py
module01/ex04/: test.py  vector.py
module01/ex05/: the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module02/ex01/: main.py
module02/ex02/: TinyStatistician.py
module02/ex04/: bad.csv  csvreader.py
module02/ex05/: build.sh  pyproject.toml
module02/ex05/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
module03/ex00/: NumPyCreator.py
module03/ex01/: ImageProcessor.py
module03/ex02/: ScrapBooker.py
module03/ex03/: ColorFilter.py
module04/ex00/: FileLoader.py
module04/ex01/: YoungestFellah.py
module04/ex02/: ProportionBySport.py
module04/ex03/: HowManyMedals.py
module04/ex04/: MyPlotLib.py
module04/ex05/: SpatioTemporalData.py
module04/ex06/: HowManyMedalsByCountry.py
