[project]
name = "my-minipack"
version = "1.0.0"
description = "A minimal example Python package."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name="Your Name" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
